--- a/Urban_cart_ecommerce/src/main/resources/templates/register.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/register.html
@@ -1,317 +1,115 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http//:www.thymeLeaf.org"
-	th:replace="~{base::Layout(~{::section})}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      th:replace="~{base::Layout(~{::section})}">
 <head>
-<meta charset="ISO-8859-1">
-<title>Register Page</title>
+    <meta charset="UTF-8">
+    <title>Register Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-	<section>
-
-
-
-
-		<div class=" container-fluid" style="margin-top: 70px">
-			<div class="container-fluid mt-1 display-flex decoration-none">
-
-
-				<div class="row">
-
-
-					<div class="col-md-14">
-
-						<div class="card shadow-sm p-0 m-5 mt-0 bg-body-tertiary rounded"
-							height="800px" width="100%">
-
-
-							<div class="card-body bg-light">
-
-								<div class="container mt-5 p-5 bg-light">
-
-									<div class="row">
-
-										<div class="col-md-6 p-5 ">
-
-
-
-
-											<!-- Start carsoule -->
-											<div class="conatiner" width="100%" height="638px">
-
-												<div id="carouselExampleControls" class="carousel slide"
-													data-bs-ride="carousel">
-													<div class="carousel-inner">
-														<div class="carousel-item active">
-															<img src="img/2593065.jpg" class="d-block w-100"
-																alt="image1" height="638px">
-														</div>
-														<div class="carousel-item">
-															<img src="img/ecommerce.webp" class="d-block w-100"
-																alt="image2" height="638px">
-														</div>
-														<div class="carousel-item">
-															<img src="img/iStock-1051616786.webp"
-																class="d-block w-100" alt="image3" height="638px">
-														</div>
-													</div>
-													<button class="carousel-control-prev" type="button"
-														data-bs-target="#carouselExampleControls"
-														data-bs-slide="prev">
-														<span class="carousel-control-prev-icon"
-															aria-hidden="true"></span> <span class="visually-hidden">Previous</span>
-													</button>
-													<button class="carousel-control-next" type="button"
-														data-bs-target="#carouselExampleControls"
-														data-bs-slide="next">
-														<span class="carousel-control-next-icon"
-															aria-hidden="true"></span> <span class="visually-hidden">Next</span>
-													</button>
-												</div>
-
-
-
-											</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-											<!-- End carsoule -->
-
-
-
-
-
-										</div>
-										<div class="col-md-6 p-5">
-
-											<div class="card shadow-lg">
-
-												<div class="card-header bg-info">
-
-
-													<p class="fs-4 text-center">Register</p>
-													<th:block th:if="${session.succMsg}">
-
-														<p class="text-success text-striped fw-bold">[[${session.succMsg}]]</p>
-														<th:block
-															th:text="${@commonServiceImple.removeSessionMsg()}"></th:block>
-													</th:block>
-
-													<th:block th:if="${session.errorMsg}">
-
-														<p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
-														<!-- In case of bean the first later is small -->
-														<th:block
-															th:text="${@commonServiceImple.removeSessionMsg()}"></th:block>
-													</th:block>
-
-
-
-
-
-
-
-
-
-												</div>
-
-
-												<div class="card-body bg-warning">
-
-													<form action="/saveUser" enctype="multipart/form-data"
-														id="userRegister" novalidate   method="post">
-
-														<div class="row">
-
-															<div class="col">
-																<label class="form-label">Full Name</label> <input
-																	required class="form-control" name="name" type="text">
-															</div>
-
-															<div class="col">
-																<label class="form-label">Contact Number</label> <input
-																	required class="form-control" name="mobileNumber"
-																	type="number">
-															</div>
-
-														</div>
-
-
-
-
-														<div class="mb-3">
-
-
-															<label class="form-label">Email</label> <input required
-																class="form-control" name="email" type="email">
-
-
-
-
-														</div>
-
-
-
-
-
-
-
-
-														<div class="row">
-
-															<div class="col">
-																<label class="form-label">Address</label> <input
-																	required class="form-control" name="address"
-																	type="text">
-															</div>
-
-															<div class="col">
-																<label class="form-label">City</label> <input required
-																	class="form-control" name="city" type="text">
-															</div>
-
-
-														</div>
-
-														<div class="row">
-
-															<div class="col">
-																<label class="form-label">State</label> <input required
-																	class="form-control" name="state" type="text">
-															</div>
-
-															<div class="col">
-																<label class="form-label">Pincode</label> <input
-																	required class="form-control" name="pincode"
-																	type="number">
-															</div>
-
-														</div>
-
-
-
-														<div class="row">
-
-															<div class="col">
-																<label class="form-label">Password</label> <input
-																	required class="form-control" name="password"
-																	type="password">
-															</div>
-
-															<div class="col">
-																<label class="form-label">Confirm Password</label> <input
-																	required class="form-control" name="cpassword"
-																	type="password">
-															</div>
-														</div>
-
-														<div class="mb-3">
-															<label class="form-label">Profile Image</label> <input
-																class="form-control" name="img" type="file">
-														</div>
-
-
-
-
-
-
-
-
-
-
-														<button type="submit"
-															class="btn bg-primary text-white col-md-12 mt-1">Register</button>
-
-
-
-
-													</form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-												</div>
-
-
-												<div class="card-footer text-center bg-info">
-													have an account <a href="/signin">Login</a>
-
-
-
-												</div>
-
-
-
-
-
-
-											</div>
-
-
-
-
-
-
-
-
-
-
-
-
-										</div>
-
-
-									</div>
-
-
-
-								</div>
-
-							</div>
-
-
-
-						</div>
-
-					</div>
-
-
-				</div>
-			</div>
-
-
-		</div>
-	</section>
-
+<section>
+    <div class="container mt-75">
+        <div class="row justify-content-center">
+            <div class="col-md-10">
+                <div class="card register-card shadow-lg">
+                    <div class="card-body">
+                        <div class="row align-items-center">
+                            <!-- Carousel Section -->
+                            <div class="col-md-6 p-4 d-flex align-items-center">
+                                <div id="carouselExampleControls" class="carousel slide w-100" data-bs-ride="carousel">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item1 active">
+                                            <img src="img/best-ecommerce-website-templates.jpg" class="d-block w-100" alt="image1">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/ecommerce.webp" class="d-block w-100" alt="image2">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/iStock-1051616786.webp" class="d-block w-100" alt="image3">
+                                        </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon"></span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon"></span>
+                                    </button>
+                                </div>
+                            </div>
+                            <!-- Registration Form -->
+                            <div class="col-md-6 p-4 d-flex align-items-center">
+                                <div class="card register-form-card w-100 shadow-lg">
+                                    <div class="card-header register-header text-center">
+                                        <h4 class="text-white">Register</h4>
+                                    </div>
+                                    <div class="card-body register-body">
+                                        <form action="/saveUser" enctype="multipart/form-data" method="post">
+                                            <div class="row mb-3">
+                                                <div class="col">
+                                                    <label class="form-label">Full Name</label>
+                                                    <input class="form-control" name="name" type="text" required>
+                                                </div>
+                                                <div class="col">
+                                                    <label class="form-label">Contact Number</label>
+                                                    <input class="form-control" name="mobileNumber" type="number" required>
+                                                </div>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label">Email</label>
+                                                <input class="form-control" name="email" type="email" required>
+                                            </div>
+                                            <div class="row mb-3">
+                                                <div class="col">
+                                                    <label class="form-label">Address</label>
+                                                    <input class="form-control" name="address" type="text" required>
+                                                </div>
+                                                <div class="col">
+                                                    <label class="form-label">City</label>
+                                                    <input class="form-control" name="city" type="text" required>
+                                                </div>
+                                            </div>
+                                            <div class="row mb-3">
+                                                <div class="col">
+                                                    <label class="form-label">State</label>
+                                                    <input class="form-control" name="state" type="text" required>
+                                                </div>
+                                                <div class="col">
+                                                    <label class="form-label">Pincode</label>
+                                                    <input class="form-control" name="pincode" type="number" required>
+                                                </div>
+                                            </div>
+                                            <div class="row mb-3">
+                                                <div class="col">
+                                                    <label class="form-label">Password</label>
+                                                    <input class="form-control" name="password" type="password" required>
+                                                </div>
+                                                <div class="col">
+                                                    <label class="form-label">Confirm Password</label>
+                                                    <input class="form-control" name="cpassword" type="password" required>
+                                                </div>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label">Profile Image</label>
+                                                <input class="form-control" name="img" type="file">
+                                            </div>
+                                            <button type="submit" class="btn register-btn w-100">Register</button>
+                                        </form>
+                                    </div>
+                                    <div class="card-footer text-center register-footer">
+                                        Already have an account? <a href="/signin">Login</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
