--- a/Urban_cart_ecommerce/src/main/resources/templates/forgot_password.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/forgot_password.html
@@ -1,80 +1,85 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http//:www.thymeLeaf.org" th:replace="~{base::Layout(~{::section})}">
 <head>
-<meta charset="ISO-8859-1">
-<title>Login Page</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="ISO-8859-1">
+    <title>Forgot Password</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<section>
-		<div class="container" style="margin-top: 70px">
-			<div class="container-fluid mb-3 display-flex decoration-none">
-				<div class="row">
-					<div class="col-md-14">
-						<div class="card shadow-sm p-3 bg-light rounded">
-							<div class="card-body">
-								<div class="container mt-5 p-5" style="background-color: #e9f7ef; border-radius: 10px;">
-									<div class="row">
-										<div class="col-md-6 p-5">
-											<!-- Start carousel -->
-											<div class="container" width="100%" height="400px">
-												<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-													<div class="carousel-inner">
-														<div class="carousel-item active">
-															<img src="img/2593065.jpg" class="d-block w-100" alt="image1" height="450px">
-														</div>
-														<div class="carousel-item">
-															<img src="img/home-page-banner-ecommerce.jpg" class="d-block w-100" alt="image2" height="450px">
-														</div>
-														<div class="carousel-item">
-															<img src="img/VQWxKr.jpg" class="d-block w-100" alt="image3" height="450px">
-														</div>
-													</div>
-													<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-														<span class="carousel-control-prev-icon" aria-hidden="true"></span> 
-														<span class="visually-hidden">Previous</span>
-													</button>
-													<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-														<span class="carousel-control-next-icon" aria-hidden="true"></span> 
-														<span class="visually-hidden">Next</span>
-													</button>
-												</div>
-											</div>
-											<!-- End carousel -->
-										</div>
-										<div class="col-md-6 p-5">
-											<div class="card shadow-lg">
-												<div class="card-header" style="background-color: #2ecc71;">
-													<p class="fs-4 text-center text-white">Forgot Password</p>
-													<th:block th:if="${session.succMsg}">
-														<p class="text-success fw-bold">[[${session.succMsg}]]</p>
-														<th:block th:text="${@commonServiceImple.removeSessionMsg()}"></th:block>
-													</th:block>
-													<th:block th:if="${session.errorMsg}">
-														<p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
-														<th:block th:text="${@commonServiceImple.removeSessionMsg()}"></th:block>
-													</th:block>
-												</div>
-												<div class="card-body" style="background-color: #f9fbfc;">
-													<form action="/forgot-password" method="post">
-														<div class="mb-3">
-															<label class="form-label">Email</label> 
-															<input class="form-control" name="email" type="email" placeholder="Enter your Email">
-														</div>
-														<button type="submit" class="btn text-white col-md-12" style="background-color: #27ae60;">Send</button>
-													</form>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+
+<section>
+    <div class="container mt-35">
+        <div class="row justify-content-center">
+            <div class="col-md-10">
+                <div class="card forgot-card shadow-lg">
+
+                    <div class="card-body">
+                        <div class="row">
+
+                            <!-- Carousel Section -->
+                            <div class="col-md-6 p-4">
+                                <div class="carousel-container">
+                                    <div id="carouselForgotPassword" class="carousel slide" data-bs-ride="carousel">
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                                <img src="img/2593065.jpg" class="d-block w-100" alt="image1">
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="img/home-page-banner-ecommerce.jpg" class="d-block w-100" alt="image2">
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="img/VQWxKr.jpg" class="d-block w-100" alt="image3">
+                                            </div>
+                                        </div>
+                                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselForgotPassword" data-bs-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Previous</span>
+                                        </button>
+                                        <button class="carousel-control-next" type="button" data-bs-target="#carouselForgotPassword" data-bs-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Next</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Forgot Password Form -->
+                            <div class="col-md-6 p-4">
+                                <div class="card forgot-form-card shadow-lg">
+                                    <div class="card-header forgot-header">
+                                        <h4 class="text-center text-white">Forgot Password</h4>
+                                    </div>
+                                    <div class="card-body forgot-body">
+                                        <th:block th:if="${session.succMsg}">
+                                            <p class="text-success fw-bold">[[${session.succMsg}]]</p>
+                                            <th:block th:text="${@commonServiceImple.removeSessionMsg()}"></th:block>
+                                        </th:block>
+                                        <th:block th:if="${session.errorMsg}">
+                                            <p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
+                                            <th:block th:text="${@commonServiceImple.removeSessionMsg()}"></th:block>
+                                        </th:block>
+
+                                        <form action="/forgot-password" method="post">
+                                            <div class="mb-3">
+                                                <label class="form-label">Email</label>
+                                                <input class="form-control" name="email" type="email" placeholder="Enter your Email">
+                                            </div>
+                                            <button type="submit" class="btn forgot-btn w-100">Send Reset Link</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div> <!-- End row -->
+                    </div> <!-- End card-body -->
+
+                </div> <!-- End card -->
+            </div> <!-- End col -->
+        </div> <!-- End row -->
+    </div> <!-- End container -->
+</section>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
