--- a/Urban_cart_ecommerce/src/main/resources/templates/login.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/login.html
@@ -2,8 +2,12 @@
 <html lang="en" xmlns:th="http//:www.thymeLeaf.org"
 	th:replace="~{base::Layout(~{::section})}">
 <head>
-<meta charset="ISO-8859-1">
-<title>Login Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
@@ -11,215 +15,84 @@
 
 
 
-		<div class=" container" style="margin-top: 70px">
-			<div class="container-fluid  mb-3 display-flex decoration-none">
-
-
-				<div class="row">
-
-
-					<div class="col-md-14">
-
-
-
-						<div class="card shadow-sm p-3  bg-body-tertiary rounded">
-
-
-
-							<div class="card-body">
-								<div class="container mt-5 p-5 bg-light">
-
-									<div class="row">
-
-										<div class="col-md-6 p-5  ">
-
-
-											<!-- Start carsoule -->
-											<div class="conatiner" width="100%" height="400px">
-
-												<div id="carouselExampleControls" class="carousel slide"
-													data-bs-ride="carousel">
-													<div class="carousel-inner">
-														<div class="carousel-item active">
-															<img src="img/2593065.jpg" class="d-block w-100"
-																alt="image1" height="450px">
-														</div>
-														<div class="carousel-item">
-															<img src="img/home-page-banner-ecommerce.jpg"
-																class="d-block w-100" alt="image2" height="450px">
-														</div>
-														<div class="carousel-item">
-															<img src="img/VQWxKr.jpg" class="d-block w-100"
-																alt="image3" height="450px">
-														</div>
-													</div>
-													<button class="carousel-control-prev" type="button"
-														data-bs-target="#carouselExampleControls"
-														data-bs-slide="prev">
-														<span class="carousel-control-prev-icon"
-															aria-hidden="true"></span> <span class="visually-hidden">Previous</span>
-													</button>
-													<button class="carousel-control-next" type="button"
-														data-bs-target="#carouselExampleControls"
-														data-bs-slide="next">
-														<span class="carousel-control-next-icon"
-															aria-hidden="true"></span> <span class="visually-hidden">Next</span>
-													</button>
-												</div>
-
-
-
-											</div>
-
-
-
-
-
-
-											<!-- End carsoule -->
-
-
-										</div>
-										<div class="col-md-6 p-5">
-
-											<div class="card shadow-lg">
-
-												<div class="card-header bg-info">
-
-
-													<p class="fs-4 text-center">Login</p>
-													<div th:if="${param.error}"
-														class="alert alert-danger text-center">
-
-														<th:block
-															th:if="${session.SPRING_SECURITY_LAST_EXCEPTION!=null}">
-									[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]
-								</th:block>
-
-
-
-													</div>
-
-													<div th:if="${param.logout}" class="alert alert-success text-center">
-														Logout Sucessfully</div>
-
-
-
-
-												</div>
-
-
-												<div class="card-body bg-warning">
-
-													<form action="/login" method="post">
-
-														<div class="mb-3">
-
-
-															<label class="form-label">Email</label> <input
-																class="form-control" name="username" type="email">
-
-
-
-
-
-
-
-														</div>
-
-
-														<div class="mb-3">
-
-
-															<label class="form-label">password</label> <input
-																class="form-control" name="password" type="password">
-
-
-
-
-
-
-
-														</div>
-
-
-
-														<button type="submit"
-															class="btn bg-primary text-white col-md-12">Login</button>
-
-
-
-
-
-													</form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-												</div>
-
-
-
-
-												<div class="card-footer text-center bg-info">
-													<a href="/forgot-password"> Forget password</a><br> Don't have an
-													account?? <a href="/register">Create One</a>
-
-
-
-												</div>
-
-
-
-
-											</div>
-
-
-
-
-
-
-
-
-
-
-
-
-										</div>
-
-<!-- fhhf -->
-									</div>
-
-
-
-								</div>
-							</div>
-
-
-						</div>
-
-
-
-					</div>
-
-
-				</div>
-
-
-
-			</div>
-
-
-		</div>
+		 <div class="container mt-35 ">
+        <div class="row justify-content-center">
+            <div class="col-md-10">
+            <div class="card card-custom shadow-lg custom-bg-lightgreen">
+
+
+                    <div class="card-body">
+                        <div class="row">
+
+                            <!-- Carousel Section -->
+                            <div class="col-md-6 p-4">
+                                <div class="carousel-container">
+                                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                                <img src="img/iStock-1051616786.webp" class="d-block w-100" alt="image1">
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="img/ecommerce.webp" class="d-block w-100" alt="image2">
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="img/best-ecommerce-website-templates.jpg" class="d-block w-100" alt="image3">
+                                            </div>
+                                        </div>
+                                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Previous</span>
+                                        </button>
+                                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Next</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Login Section -->
+                            <div class="col-md-6 p-4">
+                                <div class="card login-card shadow-lg">
+                                    <div class="card-header login-header">
+                                        <h4 class="text-center">Login</h4>
+                                    </div>
+                                    <div class="card-body">
+                                        <div th:if="${param.error}" class="alert alert-danger text-center">
+                                            <th:block th:if="${session.SPRING_SECURITY_LAST_EXCEPTION!=null}">
+                                                [[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]
+                                            </th:block>
+                                        </div>
+                                        <div th:if="${param.logout}" class="alert alert-success text-center">
+                                            Logout Successfully
+                                        </div>
+
+                                        <form action="/login" method="post">
+                                            <div class="mb-3">
+                                                <label class="form-label">Email</label>
+                                                <input class="form-control" name="username" type="email">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label">Password</label>
+                                                <input class="form-control" name="password" type="password">
+                                            </div>
+                                            <button type="submit" class="btn btn-custom w-100">Login</button>
+                                        </form>
+                                    </div>
+                                    <div class="card-footer login-footer text-center">
+                                        <a href="/forgot-password">Forget Password?</a><br>
+                                        Don't have an account? <a href="/register">Create One</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div> <!-- End row -->
+                    </div> <!-- End card-body -->
+
+                </div> <!-- End card -->
+            </div> <!-- End col -->
+        </div> <!-- End row -->
+    </div> <!-- End container -->
 
 	</section>
 
