--- a/Urban_cart_ecommerce/src/main/resources/templates/base.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/base.html
@@ -119,6 +119,7 @@
 
 								<li th:if="${user.role=='ROLE_USER'}"><a
 									class="dropdown-item" href="/user/user-orders">My Orders</a></li>
+									<li><a class="dropdown-item" href="/user/feedback">Feedback</a></li>
 								<li><a class="dropdown-item" href="/logout">Logout</a></li>
 								<li><hr class="dropdown-divider"></li>
 
