--- a/Urban_cart_ecommerce/src/main/resources/templates/user/cart.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/user/cart.html
@@ -14,7 +14,8 @@
 			<div class="card shadow-sm p-0 m-5 mt-0 bg-body-tertiary rounded">
 
 
-				<div class="card-body">
+				<div class="card-body" style="background: linear-gradient(135deg, #ff9a9e, #fad0c4);">
+
 
 					<div class="container-fluid mt-5 p-5">
 
@@ -48,12 +49,12 @@
 									class="table table-info table-striped table-bordered border-primary">
 									<thead>
 										<tr>
-											<th scope="col">Sl No</th>
-											<th scope="col">Image</th>
-											<th scope="col">Product Name</th>
-											<th scope="col">Price</th>
-											<th scope="col" class="text-center">Quantity</th>
-											<th scope="col">Total Price</th>
+										<th>#</th>
+							<th>🖼 Image</th>
+							<th>📌 Product</th>
+							<th>💰 Price</th>
+							<th class="text-center">🔢 Quantity</th>
+							<th>💵 Total</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -84,6 +85,7 @@
 								</table>
 
 								<div class="text-center">
+								
 									<a href="/user/orders" class="btn btn-warning"> Proceed Payment</a>
 								</div>
 							</div>
