--- a/Urban_cart_ecommerce/src/main/resources/templates/admin/add_admin.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/admin/add_admin.html
@@ -8,19 +8,25 @@
 <body>
 	<section>
 
-		<div class="container-fluid" style="margin-top: 70px">
+		<div class="container-fluid"
+			style="margin-top: 70px; background: linear-gradient(135deg, #2E8B57, #A7D129); padding: 50px; border-radius: 15px; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);">
 
 
-			<div class="card shadow-sm p-0 m-5 mt-0 bg-body-tertiary  rounded">
+
+			<div class="card shadow-lg p-4 rounded"
+				style="background: linear-gradient(135deg, #FFD700, #2E8B57, #FF4500, #1E90FF); color: white;">
 
 
-				<div class="card-body">
+				<div class="card-body"
+					style="background: linear-gradient(135deg, #2E8B57, #A7D129); color: green;">
 
-					<div class="container mt-5 p-5">
+					<div class="container mt-5 p-5"
+						style="background: linear-gradient(135deg, #D8F3DC, #A7D129); color: #1E3A34; padding: 20px; border-radius: 10px; font-size: 18px; font-weight: bold; transition: background 0.3s ease-in-out;">
 						<div class="row">
 
 							<div class="col-md-7 p-2 offset-md-2">
-								<div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
+								<div class="card shadow p-3 mb-5 bg-body-tertiary rounded"
+									style="background: linear-gradient(135deg, #D8F3DC, #A7D129); color: #1E3A34; padding: 20px; border-radius: 10px; font-size: 18px; font-weight: bold; transition: background 0.3s ease-in-out;">
 									<div class="card-header text-center">
 										<p class="fs-4 text-center">Add Admin</p>
 										<th:block th:if="${session.succMsg}">
@@ -37,7 +43,8 @@
 										</th:block>
 
 									</div>
-									<div class="card-body">
+									<div class="card-body"
+										style="background: linear-gradient(135deg, #D8F3DC, #A7D129); color: #1E3A34; padding: 20px; border-radius: 10px; font-size: 18px; font-weight: bold; transition: background 0.3s ease-in-out;">
 										<form action="/admin/save-admin" enctype="multipart/form-data"
 											method="post">
 											<div class="row">
