--- a/Urban_cart_ecommerce/src/main/resources/templates/admin/add_product.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/admin/add_product.html
@@ -9,13 +9,17 @@
 	<section>
 
 
-		<div class="container" style="margin-top: 70px">
+		<div class="container-fluid"
+			style="margin-top: 70px; background: linear-gradient(135deg, #2E8B57, #A7D129); padding: 50px; border-radius: 15px; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);">
 
 
-			<div class="card shadow-sm p-0 m-5 mt-0 bg-body-tertiary rounded">
+
+			<div class="card shadow-lg p-4 rounded"
+				style="background: linear-gradient(135deg, #FFD700, #2E8B57, #FF4500, #1E90FF); color: white;">
 
 
-				<div class="card-body">
+				<div class="card-body"
+					style="background: linear-gradient(135deg, #2E8B57, #A7D129); color: green;">
 
 
 					<div class="container p-5 ">
@@ -24,9 +28,10 @@
 
 							<div class="col-md-7 offset-md-2">
 
-								<div class="card bg-info shadow-lg  p-0 m-5 mt-0">
+								<div class="card bg-info shadow-lg  p-0 m-5 mt-0"
+									style="background: linear-gradient(135deg, #D8F3DC, #A7D129); color: #1E3A34; padding: 20px; border-radius: 10px; font-size: 18px; font-weight: bold; transition: background 0.3s ease-in-out;">
 
-									<div class="card-header text-center fs-4 bg-primary">
+									<div class="card-header text-center fs-4 ">
 										<p class="text-center fs-4">Add Product</p>
 
 										<th:block th:if="${session.succMsg}">
@@ -49,10 +54,11 @@
 
 
 									</div>
-									<div class="card-body bg-info">
+									<div class="card-body"
+										style="background: linear-gradient(135deg, #D8F3DC, #A7D129); color: #1E3A34; padding: 20px; border-radius: 10px; font-size: 18px; font-weight: bold; transition: background 0.3s ease-in-out;">
 
 
-											<form action="/admin/saveProduct" method="post"
+										<form action="/admin/saveProduct" method="post"
 											enctype="multipart/form-data">
 
 
@@ -81,9 +87,10 @@
 											<div class="mb-3">
 
 
-												<label>Category</label> <select class="form-control" name="category">
+												<label>Category</label> <select class="form-control"
+													name="category">
 
-													
+
 
 													<option th:each="c:${categories}">[[${c.name}]]</option>
 
@@ -100,12 +107,12 @@
 											<div class="mb-3">
 
 
-												<label> Enter Price</label> <input type="text"
-													name="price" class="form-control">
+												<label> Enter Price</label> <input type="text" name="price"
+													class="form-control">
 
 
 											</div>
-											
+
 											<div class="mb-3">
 
 
@@ -140,8 +147,8 @@
 												<div class="mb-3 col">
 
 
-													<label>Upload Image </label> <input type="file"
-														name="file" class="form-control">
+													<label>Upload Image </label> <input type="file" name="file"
+														class="form-control">
 
 
 												</div>
