--- a/Urban_cart_ecommerce/src/main/resources/templates/admin/edit_category.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/admin/edit_category.html
@@ -9,13 +9,17 @@
 	<section>
 
 
-		<div class="container" style="margin-top: 70px">
+		<div class="container-fluid"
+			style="margin-top: 70px; background: linear-gradient(135deg, #2E8B57, #A7D129); padding: 50px; border-radius: 15px; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);">
 
 
-			<div class="card shadow-sm p-0 m-5 mt-0 bg-body-tertiary rounded">
+
+			<div class="card shadow-lg p-4 rounded"
+				style="background: linear-gradient(135deg, #FFD700, #2E8B57, #FF4500, #1E90FF); color: white;">
 
 
-				<div class="card-body">
+				<div class="card-body"
+					style="background: linear-gradient(135deg, #2E8B57, #A7D129); color: green;">
 
 
 					<div class="container-fluid p-5 ">
@@ -26,7 +30,8 @@
 
 								<div class="card bg-info shadow-lg  p-0 m-5 mt-0">
 
-									<div class="card-header text-center fs-4 bg-primary">
+									<div class="card-header text-center fs-4 "
+										style="background: linear-gradient(135deg, #D8F3DC, #A7D129); color: #1E3A34; padding: 20px; border-radius: 10px; font-size: 18px; font-weight: bold; transition: background 0.3s ease-in-out;">
 										Edit Category
 
 										<th:block th:if="${session.succMsg}">
@@ -43,12 +48,13 @@
 										</th:block>
 
 									</div>
-									<div class="card-body bg-info">
+									<div class="card-body "
+										style="background: linear-gradient(135deg, #D8F3DC, #A7D129); color: #1E3A34; padding: 20px; border-radius: 10px; font-size: 18px; font-weight: bold; transition: background 0.3s ease-in-out;">
 
 
 										<form action="/admin/updateCategory" method="post"
 											enctype="multipart/form-data">
-											  <input type="hidden" name="id" th:value="${category.id}">
+											<input type="hidden" name="id" th:value="${category.id}">
 
 											<div class="mb-3">
 
@@ -108,7 +114,7 @@
 
 
 
-										
+
 
 											<button class="btn btn-primary col-md-12 mt-2">Update</button>
 
