--- a/Urban_cart_ecommerce/src/main/resources/templates/admin/products.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/admin/products.html
@@ -8,13 +8,17 @@
 <body>
 	<section>
 
-		<div class="container-fluid" style="margin-top: 70px">
+		<div class="container-fluid"  style="margin-top: 70px; background: linear-gradient(135deg, #2E8B57, #A7D129); padding: 50px; border-radius: 15px; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);">
 
 
-			<div class="card shadow-sm p-0 m-5 mt-0 bg-body-tertiary rounded">
+		
+			<div class="card shadow-lg p-4 rounded"
+				style="background: linear-gradient(135deg, #FFD700, #2E8B57, #FF4500, #1E90FF); color: white;">
 
 
-				<div class="card-body">
+				<div class="card-body"
+					style="background: linear-gradient(135deg, #2E8B57, #A7D129); color: green;">
+
 
 					<div class="container-fluid mt-5 p-5">
 
