--- a/Urban_cart_ecommerce/src/main/resources/templates/register.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/register.html
@@ -18,24 +18,26 @@
                         <div class="row align-items-center">
                             <!-- Carousel Section -->
                             <div class="col-md-6 p-4 d-flex align-items-center">
-                                <div id="carouselExampleControls" class="carousel slide w-100" data-bs-ride="carousel">
+                                <div id="carouselExampleControls" class="carousel slide w-200" data-bs-ride="carousel">
                                     <div class="carousel-inner">
-                                        <div class="carousel-item1 active">
-                                            <img src="img/best-ecommerce-website-templates.jpg" class="d-block w-100" alt="image1">
+                                        <div class="carousel-item  active">
+                                            <img src="img/iStock-1051616786.webp" class="d-block w-100" alt="image1">
                                         </div>
                                         <div class="carousel-item">
                                             <img src="img/ecommerce.webp" class="d-block w-100" alt="image2">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="img/iStock-1051616786.webp" class="d-block w-100" alt="image3">
+                                            <img src="img/best-ecommerce-website-templates.jpg" class="d-block w-100" alt="image3">
                                         </div>
                                     </div>
-                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                                        <span class="carousel-control-prev-icon"></span>
-                                    </button>
-                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                                        <span class="carousel-control-next-icon"></span>
-                                    </button>
+                                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Previous</span>
+                                        </button>
+                                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Next</span>
+                                        </button>
                                 </div>
                             </div>
                             <!-- Registration Form -->
