--- a/Urban_cart_ecommerce/src/main/resources/templates/admin/users.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/admin/users.html
@@ -76,14 +76,14 @@
 											<td>[[${u.isEnable}]]</td>
 											<td>
 											
-											<th:block th:if="${u.email == 'arindol@gmail.com'}">
+											<th:block th:if="${u.email == 'arindol.it.aec@gmail.com'}">
 											
 											<a href="#" class="btn btn-sm btn-success">Super Admin</a>
 											</th:block>
 											
 											
 											
-												 <th:block th:unless="${u.email == 'arindol@gmail.com'}">
+												 <th:block th:unless="${u.email == 'arindol.it.aec@gmail.com'}">
 												 <a
 												th:href="@{'/admin/updateSts?status=true&id='+${u.id}}+'&type='+${userType}"
 												class="btn btn-sm btn-primary">Active</a> 
